--- a/CatProject/Base.lproj/Main.storyboard
+++ b/CatProject/Base.lproj/Main.storyboard
@@ -18,6 +18,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UPh-mI-YLe">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="h6K-n9-ErZ">
+                                    <rect key="frame" x="0.0" y="107" width="414" height="531"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </activityIndicatorView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="catCellID" rowHeight="51" id="weL-MV-uOw" customClass="CatTableViewCell" customModule="CatProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="51"/>
@@ -72,6 +76,7 @@
                     </view>
                     <connections>
                         <outlet property="catTableView" destination="UPh-mI-YLe" id="ayc-tm-eAZ"/>
+                        <outlet property="loader" destination="h6K-n9-ErZ" id="dt8-Je-aNB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
