--- a/CatProject/Base.lproj/Main.storyboard
+++ b/CatProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6tb-88-5c6">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -15,8 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UPh-mI-YLe">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UPh-mI-YLe">
+                                <rect key="frame" x="0.0" y="129" width="414" height="733"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="h6K-n9-ErZ">
                                     <rect key="frame" x="0.0" y="107" width="414" height="531"/>
@@ -44,6 +44,14 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RID-OL-qcW">
+                                                    <rect key="frame" x="351" y="11" width="41" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Favori"/>
+                                                    <connections>
+                                                        <action selector="btnFavori:" destination="weL-MV-uOw" eventType="touchUpInside" id="0x4-78-pzQ"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="TR5-cJ-SGV" firstAttribute="leading" secondItem="bbi-Qe-6mm" secondAttribute="leadingMargin" id="BFW-fR-UXY"/>
@@ -64,6 +72,19 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Nq-mU-D9X">
+                                <rect key="frame" x="0.0" y="85" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Fact Cat" id="tux-lH-2za">
+                                        <barButtonItem key="rightBarButtonItem" title="Favori" id="LGE-O3-rPb">
+                                            <connections>
+                                                <segue destination="Ivf-4e-76v" kind="show" id="2Vo-TF-9zq"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -74,12 +95,106 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="hXD-wH-gaN">
+                        <connections>
+                            <outlet property="titleView" destination="2Nq-mU-D9X" id="bp9-41-Iuu"/>
+                        </connections>
+                    </navigationItem>
                     <connections>
                         <outlet property="catTableView" destination="UPh-mI-YLe" id="ayc-tm-eAZ"/>
                         <outlet property="loader" destination="h6K-n9-ErZ" id="dt8-Je-aNB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="115.84821428571428"/>
+        </scene>
+        <!--Favoris View Controller-->
+        <scene sceneID="lgi-Fj-oxC">
+            <objects>
+                <viewController id="Ivf-4e-76v" customClass="FavorisViewController" customModule="CatProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oFK-gi-Hvs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="io2-vt-v5W">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="catCellFavID" id="ZBg-7k-avk" customClass="CatFavTableViewCell" customModule="CatProject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="51"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZBg-7k-avk" id="PhX-L6-Uh2">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38w-F5-mWZ">
+                                                    <rect key="frame" x="92" y="15" width="280" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yV1-WR-Ko9">
+                                                    <rect key="frame" x="0.0" y="-17" width="84" height="84"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="yV1-WR-Ko9" secondAttribute="height" multiplier="1:1" id="FG1-Nc-aCN"/>
+                                                        <constraint firstAttribute="height" constant="84" id="OYy-J9-94b"/>
+                                                        <constraint firstAttribute="width" secondItem="yV1-WR-Ko9" secondAttribute="height" multiplier="1:1" id="RZ2-TY-WVL"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="38w-F5-mWZ" firstAttribute="leading" secondItem="yV1-WR-Ko9" secondAttribute="trailing" constant="22" id="82D-Vg-YOl"/>
+                                                <constraint firstAttribute="trailing" secondItem="38w-F5-mWZ" secondAttribute="trailing" constant="22" id="Gdi-h9-PF3"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="38w-F5-mWZ" secondAttribute="bottom" constant="4" id="JpF-P9-e1J"/>
+                                                <constraint firstItem="yV1-WR-Ko9" firstAttribute="centerY" secondItem="38w-F5-mWZ" secondAttribute="centerY" id="T7u-yG-15M"/>
+                                                <constraint firstItem="38w-F5-mWZ" firstAttribute="width" secondItem="PhX-L6-Uh2" secondAttribute="width" multiplier="0.676329" id="ZL1-an-cbG"/>
+                                                <constraint firstItem="38w-F5-mWZ" firstAttribute="top" secondItem="PhX-L6-Uh2" secondAttribute="topMargin" constant="4" id="cKB-ya-WJg"/>
+                                                <constraint firstItem="38w-F5-mWZ" firstAttribute="centerX" secondItem="PhX-L6-Uh2" secondAttribute="centerX" id="mFw-7A-XYw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageFavCat" destination="yV1-WR-Ko9" id="QTn-e4-btp"/>
+                                            <outlet property="labelCatFav" destination="38w-F5-mWZ" id="22R-EM-nF3"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="io2-vt-v5W" firstAttribute="top" secondItem="Ux7-9C-K3b" secondAttribute="top" id="XG3-uE-sPf"/>
+                            <constraint firstItem="io2-vt-v5W" firstAttribute="trailing" secondItem="Ux7-9C-K3b" secondAttribute="trailing" id="Xv7-SS-iek"/>
+                            <constraint firstItem="io2-vt-v5W" firstAttribute="bottom" secondItem="Ux7-9C-K3b" secondAttribute="bottom" id="hm7-dF-rOA"/>
+                            <constraint firstItem="io2-vt-v5W" firstAttribute="leading" secondItem="Ux7-9C-K3b" secondAttribute="leading" id="pwq-bw-9XH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ux7-9C-K3b"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="kD7-6K-tLv"/>
+                    <connections>
+                        <outlet property="tableCatFav" destination="io2-vt-v5W" id="84i-Kl-E1r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hNO-wH-wBe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1907.2463768115942" y="117.85714285714285"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="S57-Dr-9na">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6tb-88-5c6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="T6f-oX-vmJ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PQR-P7-UCS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1PS-Kr-WjP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </scene>
