--- a/CatProject/Base.lproj/Main.storyboard
+++ b/CatProject/Base.lproj/Main.storyboard
@@ -34,8 +34,8 @@
                                                     <rect key="frame" x="20" y="11" width="95.5" height="95.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="TR5-cJ-SGV" secondAttribute="height" multiplier="1:1" id="EA6-8B-SY5"/>
-                                                        <constraint firstAttribute="height" constant="84" id="EoH-q9-wzk"/>
-                                                        <constraint firstAttribute="width" constant="84" id="T5v-9G-ntV"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="QdW-4V-uZj"/>
+                                                        <constraint firstAttribute="height" constant="80" id="kCK-fI-TcU"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3b4-fd-GmP">
@@ -44,9 +44,13 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RID-OL-qcW">
-                                                    <rect key="frame" x="357" y="11" width="30" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RID-OL-qcW">
+                                                    <rect key="frame" x="357" y="10.5" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" priority="250" constant="30" id="cL4-yU-SGn"/>
+                                                        <constraint firstAttribute="width" constant="30" id="eeg-Xu-x6i"/>
+                                                        <constraint firstAttribute="width" secondItem="RID-OL-qcW" secondAttribute="height" multiplier="1:1" id="ldQ-Uw-c7F"/>
+                                                    </constraints>
                                                     <state key="normal">
                                                         <color key="titleColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="titleShadowColor" cocoaTouchSystemColor="lightTextColor"/>
@@ -58,13 +62,16 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="TR5-cJ-SGV" firstAttribute="leading" secondItem="bbi-Qe-6mm" secondAttribute="leadingMargin" id="BFW-fR-UXY"/>
+                                                <constraint firstItem="RID-OL-qcW" firstAttribute="leading" secondItem="3b4-fd-GmP" secondAttribute="trailing" constant="78.5" id="Fq0-f1-4M4"/>
                                                 <constraint firstItem="3b4-fd-GmP" firstAttribute="leading" secondItem="TR5-cJ-SGV" secondAttribute="trailing" constant="20" id="GDa-cv-xvo"/>
                                                 <constraint firstItem="3b4-fd-GmP" firstAttribute="width" secondItem="TR5-cJ-SGV" secondAttribute="width" multiplier="1.49333" id="N3M-FP-ggf"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="TR5-cJ-SGV" secondAttribute="bottom" priority="250" id="PHT-rk-35o"/>
                                                 <constraint firstItem="3b4-fd-GmP" firstAttribute="top" secondItem="bbi-Qe-6mm" secondAttribute="top" constant="4" id="fpV-yL-EGz"/>
+                                                <constraint firstItem="TR5-cJ-SGV" firstAttribute="centerY" secondItem="bbi-Qe-6mm" secondAttribute="centerY" priority="250" id="jwQ-ME-9IP"/>
                                                 <constraint firstAttribute="bottom" secondItem="3b4-fd-GmP" secondAttribute="bottom" constant="4" id="kKb-h4-1Eg"/>
                                                 <constraint firstItem="3b4-fd-GmP" firstAttribute="centerX" secondItem="bbi-Qe-6mm" secondAttribute="centerX" id="vag-KQ-Zda"/>
                                                 <constraint firstItem="TR5-cJ-SGV" firstAttribute="top" secondItem="bbi-Qe-6mm" secondAttribute="topMargin" id="xQH-uB-wWo"/>
+                                                <constraint firstItem="RID-OL-qcW" firstAttribute="centerY" secondItem="bbi-Qe-6mm" secondAttribute="centerY" id="yRT-wv-WUM"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
